added similarity analysis

--- a/src/rs-starter.ipynb
+++ b/src/rs-starter.ipynb
@@ -3212,12 +3212,12 @@
    "metadata": {},
    "source": [
     "### Top most similar users\n",
-    "- The pairs ``User_11`` and ``User_14`` and ``User_1`` and ``Ùser_3`` are the most similar users with a similarity of ``1``.\n"
+    "- The pairs (``User_11``, ``User_14``) and (``User_1``, ``Ùser_3``) are the most similar users with a similarity of ``1``.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
@@ -3277,45 +3277,8 @@
        "      <td>User_4</td>\n",
        "      <td>0.894427</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>78</th>\n",
-       "      <td>User_5</td>\n",
-       "      <td>User_14</td>\n",
-       "      <td>0.204124</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>User_2</td>\n",
-       "      <td>User_12</td>\n",
-       "      <td>0.200000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>User_2</td>\n",
-       "      <td>User_6</td>\n",
-       "      <td>0.200000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>168</th>\n",
-       "      <td>User_13</td>\n",
-       "      <td>User_20</td>\n",
-       "      <td>0.188982</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>57</th>\n",
-       "      <td>User_4</td>\n",
-       "      <td>User_8</td>\n",
-       "      <td>0.188982</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>190 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -3324,29 +3287,113 @@
        "1     User_1   User_3    1.000000\n",
        "37    User_3   User_4    0.894427\n",
        "92    User_6  User_14    0.894427\n",
-       "2     User_1   User_4    0.894427\n",
-       "..       ...      ...         ...\n",
-       "78    User_5  User_14    0.204124\n",
-       "28    User_2  User_12    0.200000\n",
-       "22    User_2   User_6    0.200000\n",
-       "168  User_13  User_20    0.188982\n",
-       "57    User_4   User_8    0.188982\n",
-       "\n",
-       "[190 rows x 3 columns]"
+       "2     User_1   User_4    0.894427"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_results.sort_values(by='similarity', ascending=False)"
+    "df_results.sort_values(by='similarity', ascending=False).head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Least Similar Users\n",
+    "- The pairs (``User_4``, ``User_8``) and (``User_13``, ``User_20``) are the least similar users with a similarity of ``0.188982``.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 214,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_1</th>\n",
+       "      <th>user_2</th>\n",
+       "      <th>similarity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>57</th>\n",
+       "      <td>User_4</td>\n",
+       "      <td>User_8</td>\n",
+       "      <td>0.188982</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>168</th>\n",
+       "      <td>User_13</td>\n",
+       "      <td>User_20</td>\n",
+       "      <td>0.188982</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>User_2</td>\n",
+       "      <td>User_6</td>\n",
+       "      <td>0.200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>User_2</td>\n",
+       "      <td>User_12</td>\n",
+       "      <td>0.200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>173</th>\n",
+       "      <td>User_14</td>\n",
+       "      <td>User_19</td>\n",
+       "      <td>0.204124</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      user_1   user_2  similarity\n",
+       "57    User_4   User_8    0.188982\n",
+       "168  User_13  User_20    0.188982\n",
+       "22    User_2   User_6    0.200000\n",
+       "28    User_2  User_12    0.200000\n",
+       "173  User_14  User_19    0.204124"
+      ]
+     },
+     "execution_count": 214,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_results.sort_values(by='similarity', ascending=True).head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
