just unrated items are being recommended

--- a/src/rs-starter.ipynb
+++ b/src/rs-starter.ipynb
@@ -5467,7 +5467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5489,16 +5489,33 @@
     "    \n",
     "    # finding similar users (need to exclude the target user)\n",
     "    similar_users = np.argsort(user_similarities)[::-1][1:]\n",
+    "    # TODO: test behaviour because there might be users with same similarity\n",
+    "    # excluding the first might exclude the wrong one instead of the target user\n",
+    "    # should I remove when similarity is 1?\n",
     "    \n",
     "    # finding out unrated items for the target user\n",
     "    unrated_items = np.where(user_item_matrix[target_user] == 0)[0]\n",
     "    \n",
+    "    print(f'Unrated items of User_{target_user + 1}: {unrated_items}\\n')\n",
+    "    \n",
     "    # recommendations for target user\n",
     "    recommendations = np.zeros(user_item_matrix.shape[1])\n",
     "    \n",
+    "    \n",
+    "    \"\"\" \n",
     "    for user in similar_users:\n",
     "        user_ratings = user_item_matrix[user]\n",
     "        recommendations += user_similarities[user] * user_ratings\n",
+    "    \"\"\" \n",
+    "    \n",
+    "    # recommendations only for items that are unrated by the target user\n",
+    "    for user in similar_users:\n",
+    "        \n",
+    "        unrated_user_ratings = user_item_matrix[user] * (user_item_matrix[target_user] == 0)\n",
+    "        \n",
+    "        recommendations += user_similarities[user] * unrated_user_ratings\n",
+    "    \n",
+    "    print(f'Recommendations for User_{target_user + 1}: {recommendations}\\n')\n",
     "    \n",
     "    # sorting\n",
     "    sorted_recommendations = np.argsort(recommendations)[::-1]\n",
@@ -5509,7 +5526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [
     {
@@ -5538,7 +5555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [
     {
@@ -5550,12 +5567,17 @@
       " 0.4472136  0.2236068  0.4472136  0.50709255 0.50709255 0.4\n",
       " 0.54772256 0.50709255]\n",
       "\n",
-      "Recommendations: [3 1 4]\n",
+      "Unrated items of User_1: [4 5 6 8 9]\n",
+      "\n",
+      "Recommendations for User_1: [0.         0.         0.         0.         5.73979776 5.05013102\n",
+      " 4.35752697 0.         4.97684868 4.54604298]\n",
+      "\n",
+      "Recommendations: [4 5 8]\n",
       "\n",
       "Recommended items for User_1:\n",
-      "- Item: Item_4\n",
-      "- Item: Item_2\n",
-      "- Item: Item_5\n"
+      "- Item: Item_5\n",
+      "- Item: Item_6\n",
+      "- Item: Item_9\n"
      ]
     }
    ],
