added condition to prevent exception when target user does not have unrated items

--- a/src/rs-starter.ipynb
+++ b/src/rs-starter.ipynb
@@ -5498,6 +5498,10 @@
     "    \n",
     "    print(f'Unrated items of User_{target_user + 1}: {unrated_items}\\n')\n",
     "    \n",
+    "    # return immediately if there are no unrated items\n",
+    "    if unrated_items.size == 0:\n",
+    "        return []\n",
+    "    \n",
     "    # recommendations for target user\n",
     "    recommendations = np.zeros(user_item_matrix.shape[1])\n",
     "    \n",
