added function to calculate Pearson's Correlation or Cosine Similarity

--- a/src/rs-starter.ipynb
+++ b/src/rs-starter.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 285,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
        "4     1.0      0.0  "
       ]
      },
-     "execution_count": 227,
+     "execution_count": 286,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
        "max     9.000000  10.000000  10.000000   1.000000  "
       ]
      },
-     "execution_count": 229,
+     "execution_count": 288,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 230,
+     "execution_count": 289,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +457,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 232,
+     "execution_count": 291,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [
     {
@@ -836,7 +836,7 @@
        "19       1        1  "
       ]
      },
-     "execution_count": 233,
+     "execution_count": 292,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [
     {
@@ -1015,7 +1015,7 @@
        "max     1.000000   1.000000   1.000000   1.000000  "
       ]
      },
-     "execution_count": 234,
+     "execution_count": 293,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [
     {
@@ -1071,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [
     {
@@ -1148,7 +1148,7 @@
        "1       11  "
       ]
      },
-     "execution_count": 236,
+     "execution_count": 295,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1160,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [
     {
@@ -1185,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 297,
    "metadata": {},
    "outputs": [
     {
@@ -2365,7 +2365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 298,
    "metadata": {},
    "outputs": [
     {
@@ -2619,7 +2619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 299,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2641,7 +2641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 300,
    "metadata": {},
    "outputs": [
     {
@@ -2714,7 +2714,7 @@
        "4  User_1  User_6    0.400000"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 300,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2726,7 +2726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [
     {
@@ -2760,7 +2760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 302,
    "metadata": {},
    "outputs": [
     {
@@ -2868,7 +2868,7 @@
        "181  User_16  User_18    0.845154"
       ]
      },
-     "execution_count": 243,
+     "execution_count": 302,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2881,7 +2881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [
     {
@@ -2907,7 +2907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [
     {
@@ -2940,7 +2940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [
     {
@@ -3048,7 +3048,7 @@
        "31    User_2  User_15    0.223607"
       ]
      },
-     "execution_count": 246,
+     "execution_count": 305,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3059,7 +3059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 306,
    "metadata": {},
    "outputs": [
     {
@@ -3617,7 +3617,7 @@
        "User_19       NaN       NaN       NaN       NaN  0.617213  "
       ]
      },
-     "execution_count": 247,
+     "execution_count": 306,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3632,7 +3632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [
     {
@@ -5003,7 +5003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [
     {
@@ -5032,7 +5032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [
     {
@@ -5068,7 +5068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [
     {
@@ -5124,7 +5124,7 @@
        "       3.23876596e-01, 3.82786600e-01])"
       ]
      },
-     "execution_count": 251,
+     "execution_count": 310,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5141,7 +5141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [
     {
@@ -5164,7 +5164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [
     {
@@ -5220,7 +5220,7 @@
        "       3.23876596e-01, 3.82786600e-01])"
       ]
      },
-     "execution_count": 253,
+     "execution_count": 312,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5231,7 +5231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 313,
    "metadata": {},
    "outputs": [
     {
@@ -5272,7 +5272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [
     {
@@ -5352,7 +5352,7 @@
        "1       1        1  "
       ]
      },
-     "execution_count": 255,
+     "execution_count": 314,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5363,7 +5363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 315,
    "metadata": {},
    "outputs": [
     {
@@ -5455,7 +5455,7 @@
        "User_2        1        1  "
       ]
      },
-     "execution_count": 256,
+     "execution_count": 315,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5467,7 +5467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5530,7 +5530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [
     {
@@ -5559,7 +5559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [
     {
@@ -5599,6 +5599,46 @@
     "for item in recommendations:\n",
     "    print(f'- Item: {df.columns[item]}')\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 320,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.stats import pearsonr\n",
+    "\n",
+    "def calculate_similarity(user1_ratings, user2_ratings, similarity='cosine'):\n",
+    "    \n",
+    "    if similarity == 'cosine':\n",
+    "        # Cosine similarity\n",
+    "        \n",
+    "        magnitudes = (np.linalg.norm(user1_ratings) * np.linalg.norm(user2_ratings))\n",
+    "        \n",
+    "        # avoiding zero division\n",
+    "        if magnitudes == 0:\n",
+    "            \n",
+    "            magnitudes += 1e-6\n",
+    "            \n",
+    "        return np.dot(user1_ratings, user2_ratings) / magnitudes\n",
+    "    \n",
+    "    elif similarity == 'pearson':\n",
+    "        # Pearson's correlation coefficient\n",
+    "        common_indices = np.logical_and(user1_ratings > 0, user2_ratings > 0)\n",
+    "        \n",
+    "        print(f'Common indices: {common_indices}')\n",
+    "        \n",
+    "        # not enough common items for correlation\n",
+    "        if np.sum(common_indices) < 2:\n",
+    "            return 0\n",
+    "        \n",
+    "        # gets correlation coeficient and discards p-value\n",
+    "        corr, _ = pearsonr(user1_ratings[common_indices], user2_ratings[common_indices])\n",
+    "        return corr\n",
+    "    \n",
+    "    else:\n",
+    "        raise ValueError('Invalid similarity!')"
    ]
   },
   {
