pearson correlation fixed :) - calculates for common indices

--- a/src/rs-starter.ipynb
+++ b/src/rs-starter.ipynb
@@ -5889,6 +5889,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using ``scipy.pearson``"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 73,
    "metadata": {},
