conversion from similarity metric to distanceadded

--- a/src/rs-starter.ipynb
+++ b/src/rs-starter.ipynb
@@ -6330,11 +6330,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Converts the similarity metric to distance"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def similarity_to_distance(similarity_matrix, user_1, user_2, similarity: str = 'cosine') -> float:\n",
+    "    if similarity == 'cosine':\n",
+    "        return 1 - similarity_matrix[user_1][user_2]\n",
+    "    elif similarity == 'pearson':\n",
+    "        return (1 - similarity_matrix[user_1][user_2]) / 2\n",
+    "    \n",
+    "    raise ValueError('Invalid similarity!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Distance between User 0 and 0 = 0.0\n",
+      "Distance between User 0 and 10 = 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "similaty_matrix = calculate_similarity_matrix(original.values[:,1:], similarity='pearson')\n",
+    "user_1, user_2 = [0, 0]\n",
+    "print(f\"Distance between User {user_1} and {user_2} = {similarity_to_distance(similaty_matrix, user_1, user_2, similarity='pearson')}\")\n",
+    "user_1, user_2 = [0, 10]\n",
+    "print(f\"Distance between User {user_1} and {user_2} = {similarity_to_distance(similaty_matrix, user_1, user_2, similarity='pearson')}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Research `Hierarchical Clustering` for different **linkage** methods:\n",
+    "- WARD\n",
+    "- SINGLE\n",
+    "- AVERAGE"
+   ]
   }
  ],
  "metadata": {
