added study notes about each  linkage method

--- a/src/rs-starter.ipynb
+++ b/src/rs-starter.ipynb
@@ -6593,9 +6593,21 @@
    "metadata": {},
    "source": [
     "# Research `Hierarchical Clustering` for different **linkage** methods:\n",
-    "- WARD\n",
     "- SINGLE\n",
-    "- AVERAGE"
+    "- WARD\n",
+    "- AVERAGE\n",
+    "\n",
+    "Distance metrics:\n",
+    "- Euclidean: is the square root of the sum of the squared differences between the coordinates of the points (distance between two points)\n",
+    "\n",
+    "- Manhattan: is the sum of the absolute differences between the coordinates of the points\n",
+    "\n",
+    "- Cosine: is the dot product of the two vectors divided by the product of the two vectors' lengths (or magnitudes)\n",
+    "\n",
+    "Efficiency of the algorithms:\n",
+    "- SINGLE: O(n^2)\n",
+    "- WARD: O(n^2)\n",
+    "- AVERAGE: O(n^2)"
    ]
   },
   {
@@ -6674,7 +6686,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`SINGLE` linkage method"
+    "`SINGLE` linkage method\n",
+    "- shortest distance between any two points in the two clusters"
    ]
   },
   {
@@ -8036,7 +8049,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`WARD` linkage method"
+    "`WARD` linkage method\n",
+    "- minimizes the variance of the clusters being merged"
    ]
   },
   {
@@ -9398,7 +9412,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`AVERAGE` linkage method"
+    "`AVERAGE` linkage method\n",
+    "- average distance between all pairs of points in the two clusters"
    ]
   },
   {
